Tittle Alignment issue

--- a/css/intermediary.css
+++ b/css/intermediary.css
@@ -152,6 +152,7 @@ a, a:hover{
 .sectiontitles{
     /*font-weight: bold;*/
     background-color: #A2FF97!important;
+    text-align: center;
 }
 
 .upmpointer{
